# Just-Forge-Engine

./: .gitignore  AssetFileSpecification  CMakeLists.txt  FileSpecificationFormat  LICENSE  Makefile.engine.linux.mak  Makefile.engine.windows.mak  Makefile.tester.linux.mak  Makefile.tester.windows.mak  Makefile.tests.linux.mak  Makefile.tests.windows.mak  MenuFileSpecification  README.md  SampleGame.cpp  build-all.bat  build-all.sh  build-and-run.sh  clean-all.bat  clean-all.sh  installer-linux(Debian-bookworm).sh  installer-linux.sh  main.cpp  postbuild.bat  postbuild.sh
Assets/ConfigurationFiles/: AssetFile  Controls.txt
Assets/ConfigurationFiles/Levels/: Level1.txt
Assets/ConfigurationFiles/Scenes/: LEVEL1  Menu
Assets/shaders/: Builtin.ObjectShader.frag.glsl  Builtin.ObjectShader.vert.glsl
Backend/: Action.cpp  Action.h  Animation.cpp  Animation.h  Assets.cpp  Assets.h  CMakeLists.txt  Components.cpp  Components.h  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  GameEngine.cpp  GameEngine.h  Physics.cpp  Physics.h  Scene.h  SceneMenu.cpp  SceneMenu.h  ScenePlay.cpp  ScenePlay.h  Vector2D.cpp  Vector2D.h
Engine/: Action.cpp  Action.h  Animation.cpp  Animation.h  Assets.cpp  Components.h  EntityManager.cpp  GameEngine.cpp  GameEngine.h  Physics.cpp  Physics.h  Scene.h  SceneMenu.cpp  SceneMenu.h  ScenePlay.cpp  Vector2D.cpp  Vector2D.h
Engine/TheFuel/: GameEngine.cpp
Engine/TheFuel/Entities/: EntityManager.cpp
Engine/TheFuel/Management/: Action.cpp  Animation.cpp  Assets.cpp
Engine/TheFuel/PhysicsEngine/: Physics.cpp  Vector2D.cpp
Engine/TheFuel/Scenes/: SceneMenu.cpp  ScenePlay.cpp
Engine/TheMachine/: GameEngine.h
Engine/TheMachine/Entities/: Components.h  Entity.h  EntityManager.h
Engine/TheMachine/Management/: Action.h  Animation.h  Assets.h
Engine/TheMachine/PhysicsEngine/: Physics.h  Vector2D.h
Engine/TheMachine/Scenes/: Scene.h  SceneMenu.h  ScenePlay.h
Just_Forge_Engine/: build.sh
Just_Forge_Engine/src/: defines.h  entry.h  game_types.h
Just_Forge_Engine/src/core/: application.c  application.h  clock.h  event.c  event.h  input.c  input.h  logger.c  logger.h  memory.c  memory.h
Just_Forge_Engine/src/dataStructures/: list.c  list.h
Just_Forge_Engine/src/math/: forge_math.c  forge_math.h  math_types.h
Just_Forge_Engine/src/memory/: pile_alloc.c  pile_alloc.h
Just_Forge_Engine/src/platform/: filesystem.c  filesystem.h  platform.h  platform_linux.c  platform_win32.c
Just_Forge_Engine/src/renderer/: renderer_backend.c  renderer_backend.h  renderer_frontend.c  renderer_frontend.h  renderer_types.h
Just_Forge_Engine/src/renderer/metal/: metal_backend.h
Just_Forge_Engine/src/renderer/openGL/: openGL_backend.h
Just_Forge_Engine/src/renderer/vulkan/: vulkan_backend.c  vulkan_backend.h  vulkan_command_buffer.c  vulkan_command_buffer.h  vulkan_device.c  vulkan_fence.c  vulkan_frame_buffer.c  vulkan_image.c  vulkan_image.h  vulkan_pipeline.c  vulkan_pipeline.h  vulkan_platform.h  vulkan_shader_utils.c  vulkan_shader_utils.h  vulkan_swapchain.c  vulkan_types.h  vulkan_utils.c  vulkan_utils.h
Just_Forge_Engine/src/renderer/vulkan/shaders/: vulkan_object_shader.c  vulkan_object_shader.h
Just_Forge_Tester/: build.bat
Just_Forge_Tester/src/: entry.c  game.c  game.h
engine/: build.bat  build.sh
engine/src/: defines.h  entry.h  game_types.h  test.c  test.h
engine/src/core/: application.c  application.h  asserts.h  clock.c  clock.h  event.c  event.h  input.c  logger.c  logger.h  memory.c  memory.h
engine/src/platform/: platform.h  platform_linux.c  platform_win32.c
engine/src/renderer/: renderer_backend.c  renderer_backend.h  renderer_frontend.c  renderer_types.h
engine/src/renderer/directX/: directX_backend.h
engine/src/renderer/openGL/: openGL_backend.h
engine/src/renderer/vulkan/: vulkan_backend.c  vulkan_backend.h  vulkan_command_buffer.c  vulkan_command_buffer.h  vulkan_device.c  vulkan_device.h  vulkan_fence.h  vulkan_frame_buffer.c  vulkan_frame_buffer.h  vulkan_platform.h  vulkan_renderpass.c  vulkan_renderpass.h  vulkan_swapchain.c  vulkan_swapchain.h  vulkan_types.h  vulkan_utils.c  vulkan_utils.h
tester/: build.bat  build.sh
tester/src/: entry.c  game.c  game.h  main.c
tests/: build.sh
tests/src/: expect.h  main.c  test_manager.c  test_manager.h
tests/src/memory/: pile_allocator_tests.c  pile_allocator_tests.h
